<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_nine"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:text="@string/nine"
        app:layout_constraintStart_toEndOf="@+id/button_eight"
        app:layout_constraintTop_toBottomOf="@+id/button_six" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_seven" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_four" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:text="@string/eight"
        app:layout_constraintStart_toEndOf="@+id/button_seven"
        app:layout_constraintTop_toBottomOf="@+id/button_five" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginTop="176dp"
        android:text="@string/three"
        app:layout_constraintStart_toEndOf="@+id/button_two"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:text="@string/six"
        app:layout_constraintStart_toEndOf="@+id/button_five"
        app:layout_constraintTop_toBottomOf="@+id/button_three" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toBottomOf="@+id/button_eight" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:text="@string/c"
        app:layout_constraintStart_toEndOf="@+id/button_zero"
        app:layout_constraintTop_toBottomOf="@+id/button_nine" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:text="@string/five"
        app:layout_constraintStart_toEndOf="@+id/button_four"
        app:layout_constraintTop_toBottomOf="@+id/button_two" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginTop="176dp"
        android:text="@string/two"
        app:layout_constraintStart_toEndOf="@+id/button_first"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_first"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="176dp"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="45dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_first" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="101dp"
        android:layout_height="41dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="101dp"
        android:layout_height="41dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="101dp"
        android:layout_height="41dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="101dp"
        android:layout_height="41dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_plus" />

    <Button
        android:id="@+id/button_result"
        android:layout_width="264dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_dot" />
</android.support.constraint.ConstraintLayout>